--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
     "@mui/material": "^5.0.3",
-    "next": "11.1.2",
+    "@prisma/client": "^3.3.0",
+    "axios": "^0.24.0",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "prisma": "^3.3.0"
   }
 }
